my-app.yaml
apiVersion: v1
kind: Pod
metadata:
  labels:
    app: my-app
    applab: learn.local.com
  name: my-app
  namespace: default
spec:
  containers:
  - image: nginx
    imagePullPolicy: Always
    name: my-app
