my-app-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: my-app-serice
spec:
  selector:
    app.kubernetes.io/name: my-app
  ports:
    - protocol: TCP
      port: 8080
      targetPort: 80
